--- a/index.html
+++ b/index.html
@@ -995,7 +995,7 @@
         into functional and beautiful digital experiences.
       </div>
       <div class="btn-group">
-        <a href="images/Reem.Sayed.CV.ATLS.pdf" download class="btn">Download CV</a>
+        <a href="images/Reem.Sayed.CV.ATS.pdf" download class="btn">Download CV</a>
         <a href="https://github.com/ReemSayed-full-stack" target="_blank" class="btn btn--github">
           <svg viewBox="0 0 24 24" fill="currentColor">
             <path
@@ -1290,3 +1290,4 @@
 </body>
 
 </html>
+
